src/objects/GOTV_Views__c.object
<CustomObject>
    <fields>
        <fullName>ColumnState__c</fullName>
        <label>ColumnState</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SortModel__c</fullName>
        <label>SortModel</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>P = Personal, G = Global</description>
        <label>Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GOTV_Views</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ViewClass__c</fullName>
        <description>Same as MainView in GOTV CC app</description>
        <label>ViiewClass</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>GOTV Views</label>
    <nameField>
        <label>GOTV Views Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GOTV Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>